test/files/neg/t5063.check
t5063.scala:2: error: value + is not a member of AnyRef
  super.+("")
        ^
1 error
